ignore CCStudio files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
-        "msp430fr5994.h": "c"
+        "msp430fr5994.h": "c",
+        "msp430.h": "c"
     },
     "cSpell.enabled": true
 }
