Add initial experiment results, some refactoring

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -54,5 +54,8 @@
         "typeinfo": "cpp",
         "utils.h": "c"
     },
-    "cSpell.enabled": true
+    "cSpell.enabled": true,
+    "cSpell.words": [
+        "FRAM"
+    ]
 }
