--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -52,7 +52,9 @@
         "thread": "cpp",
         "cinttypes": "cpp",
         "typeinfo": "cpp",
-        "utils.h": "c"
+        "utils.h": "c",
+        "stdint.h": "c",
+        "update.h": "c"
     },
     "cSpell.enabled": true,
     "cSpell.words": [
